--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,7 @@
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "build"
 }
