--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,5 @@
     { "src": "/(.*)", "dest": "/index.html" }
   ],
   "buildCommand": "npm run build",
-  "outputDirectory": "build"
+  "outputDirectory": "dist"
 }
